# Litadel

./: .gitignore  .pre-commit-config.yaml  ALL_FIXES_SUMMARY.md  BACKTEST_ARCHITECTURE_ANALYSIS.md  BUG_FIX_CHROMADB_COLLECTIONS.md  CHANGELOG.md  CONFIG_GUIDE.md  DEPLOYMENT_REQUIREMENTS.md  FINAL_REFACTORING_SUMMARY.md  FIXES_IMPLEMENTED.md  IMPLEMENTATION_COMPLETE.md  LOOK_AHEAD_BIAS_FIXES.md  QUICK_START_AFTER_FIXES.md  README.md  REFACTORING_COMPLETE.md  REMAINING_REFACTORING.md  api_database.db  config.example.ini  config.ini  format.sh  lint.sh  main.py  pyproject.toml  requirements.txt  run_api.sh  setup.py  test.py  test_backtest.py  verify_look_ahead_fix.py
.github/workflows/: README.md  lint-and-test.yml
api/: API_IMPLEMENTATION_SUMMARY.md  API_QUICKSTART.md  QUICKSTART.md  README.md  START_API.md  __init__.py  auth.py  backtest_executor.py  backtest_metrics.py  cli_admin.py  database.py  example_client.py  main.py  state_manager.py  test_strategies.py  utils.py
api/auth/: __init__.py  api_key_auth.py  dependencies.py  jwt_handler.py  models.py  password.py
api/endpoints/: __init__.py  analyses.py  auth.py  backtest_execution.py  backtests.py  data.py  portfolios.py  tickers.py
api/models/: __init__.py  backtest.py  portfolio.py  requests.py  responses.py
api/websockets/: status.py
cli/: asset_detection.py  backtest.py  file_handlers.py  helper_functions.py  helpers.py  llm_config.py  main.py  message_buffer.py  prompts.py  report_display.py  stream_processor.py  ui_display.py  utils.py
cli/static/: welcome.txt
frontend/: README.md  START_FRONTEND.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/public/favicon_io/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: theme-provider.tsx
frontend/src/components/agents/: AgentPipeline.tsx  AgentStatusCard.tsx
frontend/src/components/analysis/: AnalysisCard.tsx  AnalysisStatusCard.tsx  AnalystSelectionCard.tsx  CreateAnalysisForm.tsx  FormProgressIndicator.tsx  LivePreviewSidebar.tsx  LogViewer.tsx  MarkdownViewer.tsx  PresetCard.tsx  PriceChart.tsx  ReportCard.tsx  ReportViewer.tsx  TickerPill.tsx
frontend/src/components/backtest/: CumulativePnLChart.tsx  DrawdownChart.tsx  EquityCurveChart.tsx  PythonCodeEditor.tsx  StrategyCodeVisualizer.tsx  StrategyVisualizer.tsx
frontend/src/components/common/: KeyValueRow.tsx  MetricCard.tsx  index.ts
frontend/src/components/dashboard/: RecentActivity.tsx  SystemMetrics.tsx
frontend/src/components/data-display/: EmptyState.tsx  ErrorState.tsx  LoadingState.tsx  StatusBadge.tsx  index.ts
frontend/src/components/interactive/: Collapsible.tsx  index.ts
frontend/src/components/layout/: CommandMenu.tsx  Header.tsx  Layout.tsx  MetricGrid.tsx  NotificationCenter.tsx  PageHeader.tsx  Panel.tsx  QuickCreate.tsx  SectionHeader.tsx  Sidebar.tsx  index.ts  (+3 more)
frontend/src/config/: reportTypes.ts
frontend/src/design-system/: index.ts  theme.ts
frontend/src/hooks/: useAnalyses.ts  useAnalysisDefaults.ts  useBacktestWebSocket.ts  useBreadcrumbs.ts  useMarketData.ts  useRealTimeStatus.ts  useWebSocket.ts
frontend/src/pages/: AnalysisDetail.tsx  AnalysisList.tsx  AssetDetail.tsx  BacktestDetail.tsx  BacktestList.tsx  ChatTradingInterface.tsx  CreateAnalysis.tsx  CreateBacktest.tsx  CreatePortfolio.tsx  CreateStrategy.tsx  Dashboard.tsx  Login.tsx  PortfolioDetail.tsx  PortfolioList.tsx  Settings.tsx  StrategyDetail.tsx  StrategyList.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: analysisStore.ts  authStore.ts
frontend/src/styles/: terminal.css
frontend/src/types/: analysis.ts  api.ts  backtest.ts  portfolio.ts  trading.ts
frontend/src/utils/: ascii.ts  assetDetection.ts  colorClasses.ts  colors.ts  formatters.ts
litadel/: default_config.py
litadel/agents/: __init__.py
litadel/agents/analysts/: fundamentals_analyst.py  macro_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
litadel/agents/config/: __init__.py  analyst_config.py  prompt_builder.py
litadel/agents/managers/: research_manager.py  risk_manager.py
litadel/agents/risk_mgmt/: aggresive_debator.py  conservative_debator.py  neutral_debator.py
litadel/agents/utils/: agent_states.py  agent_utils.py  alpha_intelligence_tools.py  commodity_data_tools.py  core_stock_tools.py  crypto_data_tools.py  economic_indicator_tools.py  fundamental_data_tools.py  memory.py  news_data_tools.py  parameter_extraction_agent.py  strategy_code_generator_agent.py  strategy_dsl_agent.py  technical_indicators_tools.py  unified_market_tools.py
litadel/backtest/: __init__.py  data.py  engine.py  types.py
litadel/dataflows/: alpha_vantage.py  alpha_vantage_commodity.py  alpha_vantage_common.py  alpha_vantage_crypto.py  alpha_vantage_economic.py  alpha_vantage_fundamentals.py  alpha_vantage_global_news.py  alpha_vantage_indicator.py  alpha_vantage_intelligence.py  alpha_vantage_news.py  alpha_vantage_stock.py  cache_manager.py  config.py  crypto_indicators.py  date_validator.py  google.py  googlenews_utils.py  interface.py  local.py  reddit_utils.py  stockstats_utils.py  ticker_data.py  utils.py  y_finance.py  yfin_utils.py
litadel/graph/: __init__.py  conditional_logic.py  propagation.py  reflection.py  setup.py  signal_processing.py  trading_graph.py
tests/: README.md  __init__.py  test_backtest_api.py  test_backtest_engine.py  test_backtest_integration.py  test_frontend_build.py  test_smoke.py
tradingagents/: default_config.py
tradingagents/agents/analysts/: market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/config/: __init__.py  analyst_config.py  prompt_builder.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  commodity_data_tools.py  crypto_data_tools.py  news_data_tools.py  unified_market_tools.py
tradingagents/dataflows/: alpha_vantage.py  alpha_vantage_crypto.py  alpha_vantage_news.py  interface.py
tradingagents/graph/: propagation.py  reflection.py  setup.py  signal_processing.py  trading_graph.py
(+82 files in other folders)
