[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["litadel", "cli", "api"]

[project]
name = "litadel"
version = "0.1.0"
description = "Multi-Agents LLM Financial Trading Framework (successor of TradingAgents by TaurusResearch)"
readme = "README.md"
authors = [
    {name = "Marvin Gabler", email = "marvin@deepweather.ai"}
]
maintainers = [
    {name = "Marvin Gabler", email = "marvin@deepweather.ai"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["trading", "ai", "multi-agent", "llm", "finance", "algorithmic-trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "akshare>=1.16.98",
    "backtrader>=1.9.78.123",
    "bcrypt>=4.0.0",
    "chainlit>=2.5.5",
    "chromadb>=1.0.12",
    "eodhd>=1.0.32",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "finnhub-python>=2.4.23",
    "grip>=4.6.2",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "onnxruntime==1.22.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=3.5.0",
    "praw>=7.8.1",
    "python-multipart>=0.0.18",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ruff>=0.8.0",
    "setuptools>=80.9.0",
    "sqlalchemy==2.0.25",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "tushare>=1.4.21",
    "typing-extensions>=4.14.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=12.0",
    "yfinance>=0.2.63",
]

[project.urls]
Homepage = "https://github.com/deepweather/Litadel"
Documentation = "https://github.com/deepweather/Litadel/blob/main/README.md"
Repository = "https://github.com/deepweather/Litadel"
Issues = "https://github.com/deepweather/Litadel/issues"

[project.scripts]
litadel-cli = "cli.main:app"
litadel-api = "api.main:run_api"
litadel-admin = "api.cli_admin:app"

[project.optional-dependencies]
dev = []

[tool.ruff]
# Ruff configuration for linting and formatting
line-length = 120
target-version = "py310"

# Exclude directories from linting
exclude = [
    ".git",
    ".venv",
    "env",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "results",
    "eval_results",
    "eval_data",
    "node_modules",
    "frontend/dist",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), pyflakes (F), isort (I), and other useful rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific rules
]

# Ignore only rules that break functionality
ignore = [
    "E501",    # line too long (handled by formatter)
    "ISC001",  # implicit string concatenation (conflicts with formatter)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Critical: These files re-export modules and need unused import exceptions
"__init__.py" = ["F401", "F403"]
"**/agent_utils.py" = ["F401", "F403"]
"**/alpha_vantage.py" = ["F401"]
"**/setup.py" = ["F403", "F405"]  # Uses star imports from agents
"**/trading_graph.py" = ["F403"]  # Uses star imports from agents
# Tests can have unused imports for testing imports work
"**/tests/**" = ["F401", "T201"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["litadel", "cli", "api"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
# Docstring convention
convention = "google"

[tool.ruff.format]
# Formatting options (similar to Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
